# plp-projeto

./: .gitignore  CHANGELOG.md  LICENSE  Main.hs  Produto.hs  README.md  clientes.csv  plp-projeto.cabal  produtos.csv
app/: Auxiliares.hi  Auxiliares.hs  AvaliacaoProduto.hs  CarrinhoService.hs  Cliente.hi  Cliente.hs  ClienteRepository.hi  ClienteRepository.hs  ClienteService.hi  ClienteService.hs  Controllers.hi  Controllers.hs  Dashboards.hs  EAN13.hs  LICENSE  Main.hi  Main.hs  Produto.hi  Produto.hs  ProdutoRepository.hi  ProdutoRepository.hs  ProdutoService.hi  ProdutoService.hs  Tabela.hi  Tabela.hs  TaskCarrinho.hs  Tasks3.hs  Teste.hs  app.cabal
app/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/environment.-7376/: .ghc.environment.x86_64-mingw32-9.2.8
