cabal-version:      2.4
name:               plp-projeto
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             yallerocha
maintainer:         yalle.silva@ccc.ufcg.edu.br

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable plp-projeto
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Cliente,
                      Produto,
                      ProdutoRepository,
                      ProdutoService,
                      Auxiliares,
                      ClienteRepository,
                      Controllers,
                      ClienteService,
                      Tabela

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      bytestring >= 0.11 && < 0.12,
                      cassava >= 0.5 && < 0.6,
                      text >= 1.2 && < 1.3,
                      vector >= 0.13 && < 0.14



    hs-source-dirs:   app

    default-language: Haskell2010
